<resources>
    <string name="app_name">Emotion Detection System</string>
    <string name="crear_cuent">Crear cuenta de cuidador</string>
    <string name="enter">Enter</string>
    <string name="txt_contras">Password</string>
    <string name="txt_usuario">User</string>
    <string name="login">Login</string>
    <string name="emotion_det">Emotion Detection System</string>
    <string name="people_to_m">People to monitor</string>
    <string name="search">Search</string>
    <string name="search_by_p">Search by person name</string>
    <string name="add">Add</string>
    <string name="persona">Juanito - Date of birth: 09/07/2010</string>
    <string name="persona1">Pedrito - Date of birth: 09/07/2010</string>
    <string name="emotion_cha">Emotion Chart</string>
    <string name="persona2">Juanito has a 80% prediction of having an (to be defined) disorder.</string>
    <string name="see_detecte">See detected expressions</string>
    <string name="persona3">Juanito - Happy - 09/07/2022 8:20</string>
    <string name="persona4">Nombre - Sad - 10/07/2022 8:50</string>
    <string name="tutor_profi">Tutor profile</string>
    <string name="first_names">First names</string>
    <string name="last_names">Last names</string>
    <string name="identitatem">Identitatem card</string>
    <string name="date_of_bir">Date of birth</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_pas">Confirm password</string>
    <string name="guardar">Save</string>
    <string name="cam"> </string>

</resources>