<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tutorprofil"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/tutorprofil">

    <View
        android:id="@+id/header"
        android:layout_width="405dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:background="#00000000"
        android:elevation="4dp" />

    <View
        android:id="@+id/contenido"
        android:layout_width="405dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/contenido" />

    <TextView
        android:id="@+id/emotion_det"
        android:layout_width="282.72dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|top"
        android:text="@string/emotion_det"
        android:textAppearance="@style/emotion_det" />

    <TextView
        android:id="@+id/people_to_m"
        android:layout_width="206dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="85dp"
        android:gravity="center_horizontal|top"
        android:text="@string/see_detecte"
        android:textAppearance="@style/people_to_m" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="90.54dp"
        android:layout_height="84.17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/ellipse_1" />

    <ImageView
        android:id="@+id/icons8_usua"
        android:layout_width="61.7dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="111dp"
        app:srcCompat="@drawable/usergran" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="37.1dp"
        android:layout_height="33.35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="222dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/ellipse_3" />

    <ImageView
        android:id="@+id/icons8_c_ma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/camara" />

    <View
        android:id="@+id/campo"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp"
        android:background="#00000000"
        />

    <TextView
        android:id="@+id/first_names"
        android:layout_width="79dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="203dp"
        android:gravity="center_horizontal|top"
        android:text="@string/first_names"
        android:textAppearance="@style/first_names" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="353dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="222dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo1"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="264dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/last_names"
        android:layout_width="79dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="263dp"
        android:gravity="center_horizontal|top"
        android:text="@string/last_names"
        android:textAppearance="@style/last_names" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="351dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="282dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo2"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="325dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/identitatem"
        android:layout_width="110dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="325dp"
        android:gravity="center_horizontal|top"
        android:text="@string/identitatem"
        android:textAppearance="@style/identitatem" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="345dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="345dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo3"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="386dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/date_of_bir"
        android:layout_width="86dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="385dp"
        android:gravity="center_horizontal|top"
        android:text="@string/date_of_bir"
        android:textAppearance="@style/date_of_bir" />

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="340dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="405dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo4"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="445dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/user"
        android:layout_width="47dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="446dp"
        android:gravity="center_horizontal|top"
        android:text="@string/user"
        android:textAppearance="@style/user" />

    <View
        android:id="@+id/rectangle_10"
        android:layout_width="340dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="466dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo5"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="507dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/password"
        android:layout_width="66dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="507dp"
        android:gravity="center_horizontal|top"
        android:text="@string/password"
        android:textAppearance="@style/password" />

    <View
        android:id="@+id/rectangle_11"
        android:layout_width="338dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="527dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/campo6"
        android:layout_width="375dp"
        android:layout_height="51.27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="566dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/confirm_pas"
        android:layout_width="121dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="567dp"
        android:gravity="center_horizontal|top"
        android:text="@string/confirm_pas"
        android:textAppearance="@style/confirm_pas" />

    <View
        android:id="@+id/rectangle_12"
        android:layout_width="336dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="586dp"
        android:background="@drawable/rectangle_6" />

    <View
        android:id="@+id/guardar"
        android:layout_width="88.52dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="646dp"
        android:background="#00000000" />

    <View
        android:id="@+id/btnnuevo"
        android:layout_width="88.52dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="646dp"
        android:background="@drawable/btnnuevo" />

    <TextView
        android:id="@+id/guardar1"
        android:layout_width="78.71dp"
        android:layout_height="19.31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="651dp"
        android:gravity="center_horizontal|top"
        android:text="@string/guardar"
        android:textAppearance="@style/guardar" />

</RelativeLayout>