<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/seeemotionc"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/seeemotionc">

    <View
        android:id="@+id/header"
        android:layout_width="405dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:background="#00000000"
        android:elevation="4dp" />

    <View
        android:id="@+id/contenido"
        android:layout_width="405dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/contenido" />

    <TextView
        android:id="@+id/emotion_det"
        android:layout_width="282.72dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|top"
        android:text="@string/emotion_det"
        android:textAppearance="@style/emotion_det" />

    <TextView
        android:id="@+id/people_to_m"
        android:layout_width="206dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="85dp"
        android:gravity="center_horizontal|top"
        android:text="@string/see_detecte"
        android:textAppearance="@style/people_to_m" />

    <View
        android:id="@+id/buscar"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:background="#00000000"
        />

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/rectangle_9" />

    <TextView
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="133dp"
        android:gravity="center_horizontal|top"
        android:text="@string/search"
        android:textAppearance="@style/search" />

    <View
        android:id="@+id/rectangle_8"
        android:layout_width="167dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/rectangle_8" />

    <TextView
        android:id="@+id/search_by_p"
        android:layout_width="131dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="132dp"
        android:gravity="center_horizontal|top"
        android:text="@string/search_by_p"
        android:textAppearance="@style/search_by_p" />

    <View
        android:id="@+id/evidencia"
        android:layout_width="309dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="170dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/persona"
        android:layout_width="211dp"
        android:layout_height="16.14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="175dp"
        android:gravity="top"
        android:text="@string/persona3"
        android:textAppearance="@style/persona" />

    <View
        android:id="@+id/line_7"
        android:layout_width="309dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="194dp"
        android:background="@drawable/line_7" />

    <ImageView
        android:id="@+id/descarga_co"
        android:layout_width="171dp"
        android:layout_height="158dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="197dp"
        app:srcCompat="@drawable/happy" />

    <View
        android:id="@+id/evidencia1"
        android:layout_width="309dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="386dp"
        android:background="#00000000" />

    <TextView
        android:id="@+id/persona1"
        android:layout_width="211dp"
        android:layout_height="16.14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="390dp"
        android:gravity="top"
        android:text="@string/persona4"
        android:textAppearance="@style/persona" />

    <View
        android:id="@+id/line_8"
        android:layout_width="309dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/line_7" />

    <ImageView
        android:id="@+id/descarga_co1"
        android:layout_width="171dp"
        android:layout_height="158dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="410dp"
        app:srcCompat="@drawable/triste" />

</RelativeLayout>